# works-in-my-machine-bazel

./: .gitignore  README.md
bazel-remote-sandbox/: .bazelrc  BUILD  BUILD.hermetic  Dockerfile.clean-runner  MODULE.bazel  MODULE.bazel.hermetic  docker-compose.yml  run_clean_build.sh
bazel-remote-sandbox/src/: main.cpp
