###############################################################################
# MODULE.bazel — Bzlmod configuration for bazel_remote_sandbox
###############################################################################

module(
    name = "bazel_remote_sandbox",
    version = "1.0.0",
)

# C++ toolchain rules
bazel_dep(name = "rules_cc", version = "0.0.9")

# ─────────────────────────────────────────────────────────────────────────────
# HERMETIC ZLIB — fetched and compiled from source via the BCR. (Bazel central registry)
# Registry entry: https://registry.bazel.build/modules/zlib
# ─────────────────────────────────────────────────────────────────────────────
bazel_dep(name = "zlib", version = "1.3.2")
